--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -32,9 +32,8 @@
 
 \newcommand\ie{i.e.\xspace}
 \newcommand\eg{e.g.\xspace}
-\newcommand\QE{Qualifying Examination\index{PhD Qualifying Examination}\xspace}
-\newcommand\qe{QE\index{PhD Qualifying Examination}\xspace}
-
+\newcommand\qe{PhD Qualifying Examination\index{PhD Qualifying Examination}\xspace}
+\newcommand\QE{PhD Qualifying Examination\index{PhD Qualifying Examination}\xspace}
 
 \newcommand\delete[1]{\color{deleteColor}\sout{\textbf{#1}}\color{black}\xspace%
 \marginpar{\color{deleteColor}$\Delta$\color{black}}}
@@ -1099,12 +1098,251 @@ with another faculty member must be made.
 least one member of the committee be from outside the Department.
 
 
-\newpage
-
 %C3	PhD QUALIFYING EXAMINATION
 \subsection{\label{sec:phd_qualifying_examination}PhD Qualifying Examination}
 
-\input phd_qualifying_examination.tex
+%C3	PhD QUALIFYING EXAMINATION
+%\subsection{\label{sec:phd_qualifying_examination}PhD Qualifying Examination}
+
+
+%  \texttt{meetings/20160617/20160617\_meeting\_notes.jpg}
+%  
+%  \texttt{meetings/20160708/20160708\_meeting\_notes.jpg}
+%  
+%  \texttt{marked\_up\_versions/bo\_qe\_20160708.pdf}
+
+\cp
+
+\p The \QE (\qe, henceforth) is an oral examination based on a reading list
+tailored to the PhD candidate's general research area. It is a Department
+process, not a Supervisory Committee process. The Department delegates its
+administration to the regular Professors in the student's subdiscipline(s).
+(If the student is co-supervised by an Adjunct Professor or a cross-listed
+Professor, then that individual also takes part in the \qe.)\discuss{DK: do I
+have this exception correct?}
+
+\p The \qe should be completed between months 9 and 12 of the PhD program.
+Students who have transferred from the MSc program should take the QE within 12
+months of their transfer.\discuss{DK: did we say that exceptions could be
+granted by the CurrComm?}
+
+\p The details and timing are as follows.
+
+\begin{enumerate}
+
+    \item The Candidate prepares a 1 to 3 page\vote{DK: there has been some
+        discussion (by BB and DK) of shortening this further, even to just
+        keywords or a few senetences. I propose to put a flag in the document
+        to invite discussion. OK?} summary of their general research interests
+        and forwards it to their Supervisor for approval.  The summary is
+        intended to guide faculty members in compiling a reading list.
+
+    \item The Supervisor forwards the summary to faculty members in the
+        student's subdiscipline(s), along with a request that they, and the
+        Supervisor, each provide one or two papers (book chapters are also
+        acceptable) to make up a reading list that is relevant to the summary.
+        The list should not contain anything written by a member of the Examining
+        Committee.\vote{DK to GOC: if we don't agree on this, there should be an
+        indication of this in the document, to invite wider opinions.}
+        At least three faculty members, including the supervisor, must
+        contribute to the reading list. The list must contain between 4 and 6
+        papers\discuss{DK: I wrote in ``6'' here \ldots I don't recall if we
+        set a limit, and I've seen more than 6, but I don't want us sliding
+        into a system where every prof gives 2 papers so we can have 10 papers
+        in total, potentially}. The suggested papers must be forwarded to the
+        Supervisor within 2 weeks of the request.\discuss{I don't understand
+        this forwarding.}
+
+    \item The \supervisor vets the papers to ensure appropriateness, and then
+        distributes the list to the Candidate and the relevent
+        faculty.\discuss{DK to GOC: we need to discuss whether the \supervisor vets
+        the papers, and also who organizes the whole procedure. I could see
+        and argument that papers be sent to the \GS for organization, and that
+        seems to be the practice in ChemOce. But of course the \GS cannot vet
+        papers. And I don't think we can ask the \GC to vet them, either. So
+        there is an open question of whether, or how, to decide on
+        apprriateness. In the days of ``old comps'' there was a committee, but
+        the work was 5X less in scope since students wrote common exams.}
+            
+    \item The qualifying exam must be held within 6 weeks of the reading list
+        being distributed. 
+
+    \item It is the responsibility of the \supervisor to form the Examining
+        Committee and schedule the exam. The committee must include a Chair
+        drawn from the student's subdiscipline(s), at least three members of
+        the subdisicpline, including the \supervisor, and an External Examiner
+        drawn from the Oceanography faculty outside the sub-discipline(s) and
+        preferably in a sub-discipline closely related to the candidate’s
+        research interests. \emph{In exceptional circumstances an External from
+        outside the department may be nominated by the \supervisor. The
+        nomination must be approved by at least three BO faculty members. The
+        nominee must have no conflict of interest with the Candidate’s research
+        programme.}\discuss{I think the highlighted text should be deleted.}
+
+    \item The form of the Examining Committee must be approved by at least
+        three members of the subdisciplinary faculty no later than 3 weeks
+        prior to the date of the exam. Once approved, the \supervisor forwards
+        the research summary, the reading list, and these guidelines to the
+        External Examiner and to the Chair. The External is not required to
+        read the listed papers.\discuss{Is anyone ``required''? My impression,
+        having been at a lot of these, is that examiners often have not read
+        the other papers, especially if they are specialized (which I think
+        is a mistaken choice of paper, but that's just my own view).}
+        \vote{Does the external provide a paper? I think there is a lot of
+        merit in that, and I vote ``yes''.} At the same time, the Candidate is
+        advised of the committee membership. 
+
+    \item The Chair moderates the exam (see guidelines below) and does not
+        participate in questioning. Ideally, the exam will last no longer than
+        1.5~hours. The exam begins with a 20-minute presentation by the
+        Candidate who will attempt to demonstrate an understanding of the
+        concepts and contents of the papers, perhaps highlighting common
+        threads or links to the rest of the literature or the student's plans,
+        as appropriate.
+
+    \item The committee then questions the Candidate about oceanography and
+        topics related to the Candidate’s research interests where the entry
+        points into questions and discussions are to be based on the reading
+        material that was provided to the Candidate and Candidate’s
+        presentation. The exam is not about the proposed research.
+
+    \item Upon the completion of questioning, the committee meets \emph{in
+        camera} to agree on the exam outcome and recommendations to the
+        Candidate and their \advcom, as appropriate.
+
+    \item The possible outcomes of the Qualifying Examination are:
+
+        \begin{enumerate}
+            \item The candidate passes, without extra conditions.
+
+            \item The candidate passes, but is informed of weaknesses that
+                should be addressed during the PhD work, in the form of
+                courses, audits, or directed studies.
+
+            \item The candidate is required to take a written examination where
+                in the format and time line for the exam will determined by the
+                examining committee while meeting \emph{in camera}. This
+                examination will be based on the topics that arose during the
+                oral examination and will not exceed three hours. 
+                
+
+            \item The candidate is transferred to, or continued in, the MSc
+                programme.  \vote{DK to GOC: I added this, based on discussions
+                with BB and others about the fact that this is a formal
+                examination, and we had no ``failure'' mode.  OK?}
+
+        \end{enumerate}
+
+    \item The possible outcomes of a followup written examination are:
+
+        \begin{enumerate}
+
+            \item The candidate passes without extra conditions.
+
+            \item The candidate passes, but is informed of weaknesses that
+                should be addressed during the PhD work, in the form of
+                courses, audits, or directed studies.
+
+            \item The candidate is transferred to, or continued in, the MSc programme.
+
+        \end{enumerate}
+
+    \item The Chair shall report in writing to the Department Chair and the \GC
+        to summarise the procedure and outcome of the exam.  Copies of the
+        report will be forwarded to the Candidate and the Examining Committee.
+
+\end{enumerate}
+
+\p Guidelines for the Chair of {\QE}s.
+
+\begin{itemize}
+
+    \item The Exam:
+
+        \begin{itemize}
+
+            \item Introduce the Candidate, the External and the Examining
+                Committee as needed.
+
+            \item Summarise exam procedure: presentation, questioning, in
+                camera meeting, decision and recommendation.
+
+            \item Keep presentation by the Candidate to 20 minutes; at 25 warn a cut off.
+
+            \item Announce the questioning order, beginning with External and
+                ending with \supervisor.
+
+            \item Limit the examination to two rounds of questioning, the
+                second shorter than the first.
+
+            \item Keep questioners on time, with 10 minutes (15 minutes for the
+                External Examiner) on the first round, and less on the second
+                round.
+
+            \item Keep notes on the time used by questioners.
+
+            \item Do not let questioners go astray--keep everyone on
+                track.\discuss{I don't know what this means, or how to
+                accomplish it}
+
+            \item Discourage too much discussion back and forth between members
+                of the Examining Committee; questions should be directed at the
+                student and the student should be permitted to respond.
+
+            \item Do not allow the \supervisor to answer questions directed at student.
+
+            \item Keep the process just, calm and professional.
+
+            \item The entire exam should last no longer than 1.5 hours.\vote{DK
+                to GOC: we should use history to guide this.  And a nominal
+                calculation is: 20 min + 10min/examinar*5examiner=2 hours just
+                for one round, without in-camear.  I think stating 2.5 hours
+                for the non-in-camera part is more sensible. OK?}
+
+            \item Keep notes on significant issues during questioning.
+
+        \end{itemize}
+
+    \item The \emph{in camera} meeting:
+
+        \begin{itemize}
+
+            \item Remind the Examining Committee of the Defence outcome options
+                (see above).
+
+            \item Ask for recommendation and comments from the External first.
+
+            \item Ask remainder of the Committee, in order of questioning, for
+                their recommendation and comments.
+
+            \item Encourage either a unanimous decision, or at least a
+                consensus one. In the case of a split decision, the Chair casts
+                the deciding vote.\discuss{DK to GOC: note that I say the chair
+                can cast a deciding vote. The point is we cannot have a
+                non-outcome. This is an examination; after all, and students
+                cannot be told that the professors cannot decide whether they
+                pass or fail.}
+
+            \item Keep notes on significant issues that should be included in
+                the report sent to the Chair and the departmental \GC.
+
+        \end{itemize}
+
+    \item The Report:
+
+        \begin{itemize}
+
+
+            \item The examination Chair shall submit a written report to the
+                Chair of the Department and the departmental \GC.  The report
+                shall include a written description of the procedure and
+                outcome of the exam and associated recommendations. The report
+                shall be included in the Candidate’s departmental file.
+
+        \end{itemize}
+
+\end{itemize}
+
 
 % C4	PhD THESIS PROPOSAL AND DEFENCE
 \subsection{\label{sec:phd_thesis_proposal}PhD thesis proposal and defence}
