--- a/phd_qualifying_examination.tex
+++ b/phd_qualifying_examination.tex
@@ -1,320 +1,245 @@
-%C3	PhD QUALIFYING EXAMINATION
-%\subsection{\label{sec:phd_qualifying_examination}PhD Qualifying Examination}
-
-\cp
-
-
-\hrule
-\textbf{WORK AREA \ldots taking content from BO*tex document}
-
-\texttt{meetings/20160617/20160617\_meeting\_notes.jpg}
-
-\texttt{meetings/20160708/20160708\_meeting\_notes.jpg}
-
-\texttt{marked\_up\_versions/bo\_qe\_20160708.pdf}
-
-The \QE (\qe, henceforth) is an oral examination based on a reading list
-tailored to the PhD candidate's general research area. It is a Department
-process, not a Supervisory Committee process. The Department delegates its
-administration to the regular Professors in the student's subdiscipline(s).
-(If the student is co-supervised by an Adjunct Professor or a cross-listed
-Professor, then that individual also takes part in the \qe.)\discuss{DK: do I
-have this exception correct?}
-
-The \qe should be completed between months 9 and 12 of the PhD program.
-Students who have transferred from the MSc program should take the QE within 12
-months of their transfer.\discuss{DK: did we say that exceptions could be
-granted by the CurrComm?}
-
-The details and timing are as follows.
-
-\begin{enumerate}
-
-    \item The Candidate prepares a 1 to 3 page\discuss{DK: 
-        I change ``2 to 3'' to ``1 to 3'' based on our meeting; now, I propose
-        saying 500-word, as for meopar plain-language summary} summary of their
-        research interests and forwards it to their Supervisor for approval.
-        The summary is intended to guide faculty members in compiling a reading
-        list.  The research summary is not to be used as source material during
-        the exam.
-
-    \item Once approved, the Supervisor forwards the summary to faculty members
-        in the student's subdiscipline(s)\discuss{DK: I changed
-        ``subdiscipline'' to ``subdiscipline(s)''.}, along with a request that
-        they, and the Supervisor, each provide one or two papers (book chapters
-        are also acceptable) to make up a reading list that is relevant to the
-        summary. At least three faculty members, including the supervisor, must
-        contribute to the reading list. The list must contain between 4 and 6
-        papers\discuss{DK: I wrote in ``6'' here \ldots I don't recall if we
-        set a limit, and I've seen more than 6, but I don't want us sliding
-        into a system where every prof gives 2 papers so we can have 10 papers
-        in total, potentially}. The suggested papers must be forwarded to the
-        Supervisor within 2 weeks of the request.\discuss{I don't understand
-        this forwarding.}
-
-    \item The Advisor vets the papers to ensure appropriateness, and then
-        distributes the list to the Candidate and the relevent
-        faculty.\discuss{DK: this vetting has been controversial, I think, and
-        we should discuss it in GOC.}
-        
-            
-            The qualifying exam must be held within 6 weeks of the reading list
-            being distributed. 
-
-\item It is the responsibility of the Advisor to form the Examining Committee and schedule the exam. The committee must include a Chair drawn from the non-BO Oceanography faculty, at least three members of the BO faculty including the Advisor, and an External Examiner drawn from the Oceanography faculty outside the BO sub-discipline and preferably in a sub-discipline closely related to the candidate’s research interests. In exceptional circumstances an External from outside the department may be nominated by the Advisor. The nomination must be approved by at least three BO faculty members. The nominee must have no conflict of interest with the Candidate’s research programme. 
-
-\item The form of the Examining Committee must be approved by at least three members of the BO faculty no later than 3 weeks prior to the date of the exam. Once approved, the Advisor forwards the research summary, the reading list, and these guidelines to the External Examiner and to the Chair. The External is not required to read the listed papers. At the same time, the Candidate is advised of the committee membership. 
-
-\item The Chair moderates the exam (see guidelines below) and does not participate in questioning. Ideally, the exam will last no longer than 1.5 hours. The exam will begin with a 20-minute presentation by the Candidate who will attempt to synthesise the concepts and contents of the papers, highlighting the common threads and aspects that are relevant to their research interests.
-
-\item The committee then questions the Candidate about oceanography and topics related to the Candidate’s research interests where the entry points into questions and discussions are to be based on the reading material that was provided to the Candidate and Candidate’s presentation. The exam is not about the proposed research.
-
-\item Upon the completion of questioning, the committee will meet in camera to agree on the exam outcome and recommendations to the Candidate and their advisory committee, as appropriate.
-
-\item The possible outcomes of the written examination are:
-\begin{enumerate}
-\item The candidate passes with distinction and no extra conditions.
-\item The candidate passes without extra conditions.
-\item The candidate passes, but is informed of weaknesses that should be addressed during the PhD work, in the form of courses, audits, or directed studies.
-\item The candidate is required to take a written examination where in the format and time line for the exam will determined by the examining committee while meeting in camera. This examination will be based on the topics that arose during the oral examination and will not exceed three hours. 
-\end{enumerate}
-
-\item The possible outcomes of the written examination are:
-\begin{enumerate}
-\item The candidate passes without extra conditions.
-\item The candidate passes, but is informed of weaknesses that should be addressed during the PhD work, in the form of courses, audits, or directed studies.
-\item The candidate is transferred to, or continued in the MSc programme.
-\end{enumerate}
-
-\item The Chair shall report in writing to the Department Chair and the departmental Graduate Co-ordinator and will summarise the procedure and outcome of the exam. Copies of the report will be forwarded to the Candidate and the Examining Committee.
-
-\end{enumerate}
-
-Guidelines for the Chair of the Biological Oceanography PhD Qualifying Exam
-\begin{itemize}
-\item The Exam:
-\begin{itemize}
-\item Introduce the Candidate, the External and the Examining Committee as needed
-\item Summarise exam procedure: presentation, questioning, in camera meeting, decision and recommendation
-\item Keep presentation by the Candidate to 20 minutes; at 25 warn a cut off
-\item Announce the questioning order, beginning with External and ending with Advisor 
-\item Maximum two rounds of questioning; the second shorter than the first
-\item Keep questioners on time; first round 10 min. max with more (~15 min.) for the External
-\item Keep notes on the time used by questioners
-\item Don’t let questioners go astray – keep everyone on track
-\item Don’t allow Advisor to answer questions directed at student
-\item Keep the process just, calm and professional
-\item Entire exam should last no longer than 1.5 hrs. 
-\item Keep notes on significant issues during questioning
-\end{itemize}
-
-\item In Camera meeting:
-\begin{itemize}
-\item Remind the Examining Committee of the Defence outcome options (above).
-\item Ask for recommendation and comments from the External first.
-\item Ask remainder of the Committee, in order of questioning, for their recommendation and comments.
-\item Chair the deliberations toward a unanimous decision or at very least a consensus on the outcome.
-\item Keep notes on significant issues as they should be included in the report sent to the Chair and the departmental Graduate Co-ordinator.
-\end{itemize}
-
-\item The Report:
-\begin{itemize}
-\item The examination Chair shall submit a written report to the Chair of the Department and the departmental Graduate Co-ordinator. The report shall include a written description of the procedure and outcome of the exam and associated recommendations. The report shall be included in the Candidate’s departmental file.
-\end{itemize}
-
-\end{itemize}
-
-\hrule
-
-
-%% these are from the BIO-OCEA document
-
-\p The \di{PhD qualifying examination} is an oral examination based on a
-reading list tailored to the PhD candidate's research area. The details and the
-timing are as follows.
-
-\p The candidate prepares a 1 to 3 page\discuss{DK: I suggest 1 page, max.} 
-should be completed between months 9 and 12 of
-the program.  Students transferring from the MSc program should take the
-qualifying examinations within 12 months of their transfer.
-
-\p This examination is designed to assess the student's background knowledge, with
-the primary aim of identifying weaknesses that need to be addressed in order
-for a student to undertake research at the Ph.D. level in the chosen field. The
-format varies with sub-discipline. In each case there is an oral component, but
-in some cases there can also be a written assignment before or after the oral
-examination.
-
-\p The \curcom  may grant extensions up to month 15 if the student and supervisor
-document a compelling conflict, e.g. \di{fieldwork}.
- 
-
-%C3.1	QUALIFYING EXAMINATION COMMITTEE
-\subsubsection{Qualifying Examination committee}
-
-\cp
-
-\p The examination committee has at least 4 members, including a faculty member
-from outside the sub- discipline, and a departmental representative who acts as
-chair. The \GS will arrange for the Departmental Representative (normally the
-\GC or a designate). The composition of the rest of the examining committee is
-set by the sub-discipline.
-
-\p The topics of the examination are student-specific, and may include items of a
-general oceanographic nature (tailored to the courses taken) as well as items
-that are more tightly focused on the sub-discipline and the intended area of
-research.
-
-%C3.2	FORMAT AND GUIDELINES
-\subsubsection{Format and guidelines}
-
-%C3.2.1  BIOLOGICAL OCEANOGRAPHY QE GUIDELINES
-
-\hrule
-
-\input{BO_Qualifying_Aug2013_draft.tex}
-
-\hrule
-
-\paragraph{Biological Oceanography QE guidelines}\hfill
-
-\cp
-\p The core of the qualification process is an oral examination based on a reading
-list tailored to the student's research area. In some cases this may be
-followed by a written examination. The details and the timing are as follows.
-
-\begin{enumerate}
-
-\item The PhD candidate prepares a brief (2-3 page) summary of his or her
-research interests and sends it to the BO faculty. The student's summary of
-research interests guides faculty members in the selection of papers; it will
-not be used as source material during the exam, and neither the student nor the
-committee members bring copies of the research summary to the exam.
-
-\item Based on this document, at least 3 of the available BO faculty members
-(including the supervisor) each contribute one or two papers or book chapters
-to a reading list. These papers are intended to serve as guides for the exam
-and to provide entry points for discussions of oceanographic topics during
-questioning. The process is organized by the research supervisor, who vets the
-papers to ensure appropriateness, and then communicates the list to the student
-and the BO faculty within 2 weeks of receipt of the student's research summary.
-
-\item It is the responsibility of the candidate's supervisor to: a) form the
-Examining Committee; and b) schedule the exam. The committee will include a
-Chair, at least three members of the BO faculty, and one Oceanography faculty
-member from out of the BO sub-discipline, preferably in the sub-discipline most
-closely related to the student's research. The Chair (a member of the
-Oceanography faculty not in BO) will serve as moderator of the exam and will
-not ask questions. 3 members of the BO group must approve the form of the
-examining committee no later than 3 weeks prior to the date of the exam. The
-composition of the committee will be revealed to the student and the student
-will see that each member has copies of the readings.
-
-\item Within 6 weeks after the reading list is given to the student, an oral
-examination is held.
-
-\item The exam begins with a 20-minute presentation by the student,
-highlighting aspects of the papers or chapters that are relevant to his or her
-research interests.
-
-\item During the next 1-1.5~h, the committee asks questions about oceanography
-and topics related to the students research interests. Entry points into
-questions and discussions are to be based on the reading material that was
-provided to the student and by the student's presentation.
-
-\item After the exam, the committee meets in camera to agree on comments and
-recommendations to the student and to the students committee, as appropriate.
-
-\item The possible outcomes of the oral examination are:
-\begin{itemize}
-\item The candidate passes without extra conditions.
-
-\item The candidate passes, but is informed of weaknesses that should be
-addressed during the PhD work, e.g. in courses or in directed studies.
-
-\item The candidate is required to take a written examination, at a date
-determined during the oral examination meeting. This examination will be based
-on the topics that arose during the oral examination and will not exceed three
-hours. The committee can then pass the student with no extra conditions, or be
-informed of weaknesses that should be addressed during the PhD work, e.g. in
-courses or in directed studies.
-
-\end{itemize}
-
-\item The Chair is to report in writing to the Chair of the Curriculum
-Committee on the outcome of the exam, with copies to candidate and examining
-committee.
-
-\end{enumerate}
-
-
-%C3.2.2  CHEMICAL OCEANOGRAPHY QE GUIDELINES
-\paragraph{Chemical Oceanography QE guidelines}\hfill
-
-\cp
-
-\p No discipline-specific guidelines--follow general Departmental guidelines.
-
-%C3.2.3  GEOLOGICAL OCEANOGRAPHY QE GUIDELINES
-\paragraph{Geological Oceanography QE guidelines}\hfill
-
-\cp
-
-\p No discipline-specific guidelines--follow general Departmental guidelines.
-
-%C3.2.4  PHYSICAL OCEANOGRAPHY QE GUIDELINES
-\paragraph{Physical Oceanography QE guidelines}\hfill
-\cp
-
-\p The core of the qualification process is an oral examination based on a reading
-list tailored to the student's research area. In some cases this may be
-followed by a written examination. The details and the timing are as follows.
-
-\p The PhD candidate prepares a brief (1 page) description of the intended area of
-research and sends it to the physical oceanography faculty members 5 weeks
-prior to the oral examination.
-
-\p Based on this document, each available faculty member in the sub-discipline
-contributes a paper to a reading list. This process is organized by the
-research supervisor, who then communicates the list to the student and the
-Physical Oceanography faculty members within 1 week of receipt of the student's
-research summary.
-
-\p Within 4 to 6 weeks, an oral examination is held, to test the student's
-comprehension of the reading list and its relevance to the intended research.
-The examination committee comprises all available faculty in the
-sub-discipline, a faculty member from another sub-discipline, and a
-Departmental representative.
-
-\p The possible outcomes of the oral examination are:
-\begin{itemize}
-\item The candidate passes without extra conditions
-
-\item The candidate passes, but is informed of weaknesses that should be
-addressed during the PhD work, e.g. to be addressed in courses or in directed
-studies
-
-\item The candidate is required to sit written examination, at a date
-determined during the oral examination meeting. This examination will be based
-on the topics arising during the oral defence.
-
-\end{itemize}
-
-
-
-%C3.3	QUALIFYING EXAMINATION OUTCOME
-\subsubsection{Qualifying Examination outcome}
-
-\cp
-\p There are several possible outcomes of the qualifying examination:
-
-\begin{itemize}
-
-\item Continuation in the PhD program with additional course work or directed studies
-\item Continuation in the PhD program without additional course work or directed studies
-\item Transfer to the MSc program
-\item Transfer to the PhD program with additional course work or directed studies
-\item Transfer to the PhD program without additional course work or directed studies
-\item Continuation in the MSc program
-
-\end{itemize}
+%%% this whole document is commented-out. It was just a draft, and the material is no
+%%% included in the main document.
+
+%%% %C3	PhD QUALIFYING EXAMINATION
+%%% %\subsection{\label{sec:phd_qualifying_examination}PhD Qualifying Examination}
+%%% 
+%%% 
+%%% %  \texttt{meetings/20160617/20160617\_meeting\_notes.jpg}
+%%% %  
+%%% %  \texttt{meetings/20160708/20160708\_meeting\_notes.jpg}
+%%% %  
+%%% %  \texttt{marked\_up\_versions/bo\_qe\_20160708.pdf}
+%%% 
+%%% \cp
+%%% 
+%%% \p The \QE (\qe, henceforth) is an oral examination based on a reading list
+%%% tailored to the PhD candidate's general research area. It is a Department
+%%% process, not a Supervisory Committee process. The Department delegates its
+%%% administration to the regular Professors in the student's subdiscipline(s).
+%%% (If the student is co-supervised by an Adjunct Professor or a cross-listed
+%%% Professor, then that individual also takes part in the \qe.)\discuss{DK: do I
+%%% have this exception correct?}
+%%% 
+%%% \p The \qe should be completed between months 9 and 12 of the PhD program.
+%%% Students who have transferred from the MSc program should take the QE within 12
+%%% months of their transfer.\discuss{DK: did we say that exceptions could be
+%%% granted by the CurrComm?}
+%%% 
+%%% \p The details and timing are as follows.
+%%% 
+%%% \begin{enumerate}
+%%% 
+%%%     \item The Candidate prepares a 1 to 3 page\vote{DK: there has been some
+%%%         discussion (by BB and DK) of shortening this further, even to just
+%%%         keywords or a few senetences. I propose to put a flag in the document
+%%%         to invite discussion. OK?} summary of their general research interests
+%%%         and forwards it to their Supervisor for approval.  The summary is
+%%%         intended to guide faculty members in compiling a reading list.
+%%% 
+%%%     \item The Supervisor forwards the summary to faculty members in the
+%%%         student's subdiscipline(s), along with a request that they, and the
+%%%         Supervisor, each provide one or two papers (book chapters are also
+%%%         acceptable) to make up a reading list that is relevant to the summary.
+%%%         The list should not contain anything written by a member of the Examining
+%%%         Committee.\vote{DK to GOC: if we don't agree on this, there should be an
+%%%         indication of this in the document, to invite wider opinions.}
+%%%         At least three faculty members, including the supervisor, must
+%%%         contribute to the reading list. The list must contain between 4 and 6
+%%%         papers\discuss{DK: I wrote in ``6'' here \ldots I don't recall if we
+%%%         set a limit, and I've seen more than 6, but I don't want us sliding
+%%%         into a system where every prof gives 2 papers so we can have 10 papers
+%%%         in total, potentially}. The suggested papers must be forwarded to the
+%%%         Supervisor within 2 weeks of the request.\discuss{I don't understand
+%%%         this forwarding.}
+%%% 
+%%%     \item The \supervisor vets the papers to ensure appropriateness, and then
+%%%         distributes the list to the Candidate and the relevent
+%%%         faculty.\discuss{DK to GOC: we need to discuss whether the \supervisor vets
+%%%         the papers, and also who organizes the whole procedure. I could see
+%%%         and argument that papers be sent to the \GS for organization, and that
+%%%         seems to be the practice in ChemOce. But of course the \GS cannot vet
+%%%         papers. And I don't think we can ask the \GC to vet them, either. So
+%%%         there is an open question of whether, or how, to decide on
+%%%         apprriateness. In the days of ``old comps'' there was a committee, but
+%%%         the work was 5X less in scope since students wrote common exams.}
+%%%             
+%%%     \item The qualifying exam must be held within 6 weeks of the reading list
+%%%         being distributed. 
+%%% 
+%%%     \item It is the responsibility of the \supervisor to form the Examining
+%%%         Committee and schedule the exam. The committee must include a Chair
+%%%         drawn from the student's subdiscipline(s), at least three members of
+%%%         the subdisicpline, including the \supervisor, and an External Examiner
+%%%         drawn from the Oceanography faculty outside the sub-discipline(s) and
+%%%         preferably in a sub-discipline closely related to the candidate’s
+%%%         research interests. \emph{In exceptional circumstances an External from
+%%%         outside the department may be nominated by the \supervisor. The
+%%%         nomination must be approved by at least three BO faculty members. The
+%%%         nominee must have no conflict of interest with the Candidate’s research
+%%%         programme.}\discuss{I think the highlighted text should be deleted.}
+%%% 
+%%%     \item The form of the Examining Committee must be approved by at least
+%%%         three members of the subdisciplinary faculty no later than 3 weeks
+%%%         prior to the date of the exam. Once approved, the \supervisor forwards
+%%%         the research summary, the reading list, and these guidelines to the
+%%%         External Examiner and to the Chair. The External is not required to
+%%%         read the listed papers.\discuss{Is anyone ``required''? My impression,
+%%%         having been at a lot of these, is that examiners often have not read
+%%%         the other papers, especially if they are specialized (which I think
+%%%         is a mistaken choice of paper, but that's just my own view).}
+%%%         \vote{Does the external provide a paper? I think there is a lot of
+%%%         merit in that, and I vote ``yes''.} At the same time, the Candidate is
+%%%         advised of the committee membership. 
+%%% 
+%%%     \item The Chair moderates the exam (see guidelines below) and does not
+%%%         participate in questioning. Ideally, the exam will last no longer than
+%%%         1.5~hours. The exam begins with a 20-minute presentation by the
+%%%         Candidate who will attempt to demonstrate an understanding of the
+%%%         concepts and contents of the papers, perhaps highlighting common
+%%%         threads or links to the rest of the literature or the student's plans,
+%%%         as appropriate.
+%%% 
+%%%     \item The committee then questions the Candidate about oceanography and
+%%%         topics related to the Candidate’s research interests where the entry
+%%%         points into questions and discussions are to be based on the reading
+%%%         material that was provided to the Candidate and Candidate’s
+%%%         presentation. The exam is not about the proposed research.
+%%% 
+%%%     \item Upon the completion of questioning, the committee meets \emph{in
+%%%         camera} to agree on the exam outcome and recommendations to the
+%%%         Candidate and their \advcom, as appropriate.
+%%% 
+%%%     \item The possible outcomes of the Qualifying Examination are:
+%%% 
+%%%         \begin{enumerate}
+%%%             \item The candidate passes, without extra conditions.
+%%% 
+%%%             \item The candidate passes, but is informed of weaknesses that
+%%%                 should be addressed during the PhD work, in the form of
+%%%                 courses, audits, or directed studies.
+%%% 
+%%%             \item The candidate is required to take a written examination where
+%%%                 in the format and time line for the exam will determined by the
+%%%                 examining committee while meeting \emph{in camera}. This
+%%%                 examination will be based on the topics that arose during the
+%%%                 oral examination and will not exceed three hours. 
+%%%                 
+%%% 
+%%%             \item The candidate is transferred to, or continued in, the MSc
+%%%                 programme.  \vote{DK to GOC: I added this, based on discussions
+%%%                 with BB and others about the fact that this is a formal
+%%%                 examination, and we had no ``failure'' mode.  OK?}
+%%% 
+%%%         \end{enumerate}
+%%% 
+%%%     \item The possible outcomes of a followup written examination are:
+%%% 
+%%%         \begin{enumerate}
+%%% 
+%%%             \item The candidate passes without extra conditions.
+%%% 
+%%%             \item The candidate passes, but is informed of weaknesses that
+%%%                 should be addressed during the PhD work, in the form of
+%%%                 courses, audits, or directed studies.
+%%% 
+%%%             \item The candidate is transferred to, or continued in, the MSc programme.
+%%% 
+%%%         \end{enumerate}
+%%% 
+%%%     \item The Chair shall report in writing to the Department Chair and the \GC
+%%%         to summarise the procedure and outcome of the exam.  Copies of the
+%%%         report will be forwarded to the Candidate and the Examining Committee.
+%%% 
+%%% \end{enumerate}
+%%% 
+%%% \p Guidelines for the Chair of {\QE}s.
+%%% 
+%%% \begin{itemize}
+%%% 
+%%%     \item The Exam:
+%%% 
+%%%         \begin{itemize}
+%%% 
+%%%             \item Introduce the Candidate, the External and the Examining
+%%%                 Committee as needed.
+%%% 
+%%%             \item Summarise exam procedure: presentation, questioning, in
+%%%                 camera meeting, decision and recommendation.
+%%% 
+%%%             \item Keep presentation by the Candidate to 20 minutes; at 25 warn a cut off.
+%%% 
+%%%             \item Announce the questioning order, beginning with External and
+%%%                 ending with \supervisor.
+%%% 
+%%%             \item Limit the examination to two rounds of questioning, the
+%%%                 second shorter than the first.
+%%% 
+%%%             \item Keep questioners on time, with 10 minutes (15 minutes for the
+%%%                 External Examiner) on the first round, and less on the second
+%%%                 round.
+%%% 
+%%%             \item Keep notes on the time used by questioners.
+%%% 
+%%%             \item Do not let questioners go astray--keep everyone on
+%%%                 track.\discuss{I don't know what this means, or how to
+%%%                 accomplish it}
+%%% 
+%%%             \item Discourage too much discussion back and forth between members
+%%%                 of the Examining Committee; questions should be directed at the
+%%%                 student and the student should be permitted to respond.
+%%% 
+%%%             \item Do not allow the \supervisor to answer questions directed at student.
+%%% 
+%%%             \item Keep the process just, calm and professional.
+%%% 
+%%%             \item The entire exam should last no longer than 1.5 hours.\vote{DK
+%%%                 to GOC: we should use history to guide this.  And a nominal
+%%%                 calculation is: 20 min + 10min/examinar*5examiner=2 hours just
+%%%                 for one round, without in-camear.  I think stating 2.5 hours
+%%%                 for the non-in-camera part is more sensible. OK?}
+%%% 
+%%%             \item Keep notes on significant issues during questioning.
+%%% 
+%%%         \end{itemize}
+%%% 
+%%%     \item The \emph{in camera} meeting:
+%%% 
+%%%         \begin{itemize}
+%%% 
+%%%             \item Remind the Examining Committee of the Defence outcome options
+%%%                 (see above).
+%%% 
+%%%             \item Ask for recommendation and comments from the External first.
+%%% 
+%%%             \item Ask remainder of the Committee, in order of questioning, for
+%%%                 their recommendation and comments.
+%%% 
+%%%             \item Encourage either a unanimous decision, or at least a
+%%%                 consensus one. In the case of a split decision, the Chair casts
+%%%                 the deciding vote.\discuss{DK to GOC: note that I say the chair
+%%%                 can cast a deciding vote. The point is we cannot have a
+%%%                 non-outcome. This is an examination; after all, and students
+%%%                 cannot be told that the professors cannot decide whether they
+%%%                 pass or fail.}
+%%% 
+%%%             \item Keep notes on significant issues that should be included in
+%%%                 the report sent to the Chair and the departmental \GC.
+%%% 
+%%%         \end{itemize}
+%%% 
+%%%     \item The Report:
+%%% 
+%%%         \begin{itemize}
+%%% 
+%%% 
+%%%             \item The examination Chair shall submit a written report to the
+%%%                 Chair of the Department and the departmental \GC.  The report
+%%%                 shall include a written description of the procedure and
+%%%                 outcome of the exam and associated recommendations. The report
+%%%                 shall be included in the Candidate’s departmental file.
+%%% 
+%%%         \end{itemize}
+%%% 
+%%% \end{itemize}
+%%% 
